# ships-project

./: .gitignore  .project  CMakeLists.txt  README.txt  SHIPSModule.cmake  ships-project.kdev4  shipsconfig.h  shipsconfig.h.cmake
.kdev4/: ships-project.kdev4
cl/: config.xml
cl/ships/core/matrix/: matrix.cfg  radix_sort.cl
cl/ships/core/vector/: mul.cl
cl/ships/video/: aco_ptv.cl
data/: gtx580
data/xsd/: opencl_config.xml  opencl_config.xsd  opencl_program_config.xsd
inc/ships/: ships.hpp
lib/: .gitignore
nbproject/: project.xml
src/: CMakeLists.txt
src/ships/: CMakeLists.txt
src/ships/core/: CMakeLists.txt
src/ships/core/inc/ships/core/: allocator.hpp  array.hpp  color.hpp  common.hpp  config.hpp  core.hpp  device_manager.hpp  events.hpp  exceptions.hpp  execution_model.hpp  geometry_2d.hpp  geometry_3d.hpp  image.hpp  matrix.hpp  matrix_operations.hpp  memory_model.hpp  metadata.hpp  operations.hpp  pixel.hpp  sample_model.hpp  timer.hpp  util.hpp  vector.hpp
src/ships/core/src/: array.cpp  color.cpp  config.cpp  device_manager.cpp  image.cpp  matrix.cpp  matrix_operations.cpp  memory_model.cpp  pixel.cpp  sample_model.cpp  util.cpp  vector.cpp
src/ships/feature/: CMakeLists.txt
src/ships/feature/inc/ships/feature/: KeyPoint.hpp  feature.hpp
src/ships/feature/src/: KeyPoint.cpp
src/ships/image/: CMakeLists.txt
src/ships/image/inc/ships/image/: image.hpp
src/ships/io/: CMakeLists.txt
src/ships/io/inc/ships/io/: exceptions.hpp  imageio.hpp  io.hpp  iostream.hpp  matrixio.hpp  plugin_bmp.hpp  plugin_manager.hpp  plugin_octave_text_matrix.hpp  plugin_png.hpp
src/ships/io/src/: imageio.cpp  iostream.cpp  matrixio.cpp  plugin_manager.cpp  plugin_octave_text_matrix.cpp  plugin_png.cpp
src/ships/video/: CMakeLists.txt
src/ships/video/inc/ships/video/: aco_ptv.hpp  host_aco_ptv.hpp  motion_estimator.hpp  parallel_aco_ptv.hpp  video.hpp
src/ships/video/src/: aco_ptv.cpp  host_aco_ptv.cpp  parallel_aco_ptv.cpp
tests/: CMakeLists.txt  SHIPSMakeTest.cmake
tests/ships/: CMakeLists.txt
tests/ships/core/: CMakeLists.txt
tests/ships/core/src/: array_test.hpp  config_test.hpp  device_manager_test.cpp  device_manager_test.hpp  matrix_test.cpp  matrix_test.hpp  memory_model_test.hpp  pixel_test.hpp  test_ships_core.cpp  util_test.hpp  vector_test.cpp  vector_test.hpp
tests/ships/io/: CMakeLists.txt
tests/ships/io/src/: iostream_test.hpp  plugin_octave_text_matrix_test.hpp  plugin_png_test.hpp  test_ships_io.cpp
tests/ships/video/: CMakeLists.txt
tests/ships/video/src/: aco_ptv_test.hpp  aco_ptv_test_simple.hpp  host_aco_ptv_test.hpp  parallel_aco_ptv_test.cpp  parallel_aco_ptv_test.hpp  test_ships_video.cpp
